--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  <!--head section starts-->
  <header>
    <div class="user">
-    <img src="img/me.jpg" alt="">
+    <img src="img/Profile.jpg" alt="">
     <h3 class="name">Peter Sutter</h3>
     <p>Web Developer</p>
    </div>
