Added projects to portfolio

--- a/index.html
+++ b/index.html
@@ -123,6 +123,35 @@
         <div class="box">
         <a href="https://peterksutter.github.io/League-table/" target="_blank"><button class="btn">League-table<i class="fa-solid fa-link"></i></button></a>
         </div>
+
+        
+      <div class="box">
+         <img src="img/img1.jpg" alt=""  width="300" height="300">
+      </div>
+
+
+      <div class="box">
+         <img src="img/Project 2.png" alt=""  width="300" height="300">
+      </div>
+
+       <div class="box">
+         <img src="img/Project 3.png" alt=""  width="300" height="300">
+      </div>
+
+
+      <div class="box">
+         <a href="https://peterksutter.github.io/Meta-Coding-School/" target="_blank"></i><button class="btn">Meta Coding School<i class="fa-solid fa-link"></i></button></a>
+        </div>
+   
+   
+        <div class="box" id="">
+       <a href="https://peterksutter.github.io/Parkland-Hospital/" target="_blank"><button class="btn">Instagram Clone<i class="fa-solid fa-link"></i></button></a>
+        </div>
+   
+        <div class="box">
+        <a href="https://peterksutter.github.io/Calculator/" target="_blank"><button class="btn">Calculators<i class="fa-solid fa-link"></i></button></a>
+        </div>
+        
       </div>
    </div>
 </section>
